--- a/inst/rmd/P2.Rmd
+++ b/inst/rmd/P2.Rmd
@@ -34,6 +34,37 @@ knitr::opts_chunk$set(#cache   = TRUE,
                warning = FALSE) 
 startTime <- Sys.time()
 
+tableReplaces <- paste0(outputdir, "\\tablereplace.csv")
+if (file.exists(tableReplaces)){
+  print("updating for QA using tablereplace.csv")
+  df <- read.csv2(tableReplaces, header = TRUE, sep = ",", stringsAsFactors=FALSE)
+  
+  lab_results <- ifelse("lab_results" %in% tolower(df$ORG_NAME),  df$NEW_NAME[match(tolower("lab_results"), tolower(df$ORG_NAME))], "lab_results")
+  encounters <- ifelse("encounters" %in% tolower(df$ORG_NAME),  df$NEW_NAME[match(tolower("encounters"), tolower(df$ORG_NAME))], "encounters")
+  prescribing <- ifelse("prescribing" %in% tolower(df$ORG_NAME),  df$NEW_NAME[match(tolower("prescribing"), tolower(df$ORG_NAME))], "prescribing")
+  procedures <- ifelse("procedures" %in% tolower(df$ORG_NAME),  df$NEW_NAME[match(tolower("procedures"), tolower(df$ORG_NAME))], "procedures")
+  social_history <- ifelse("social_history" %in% tolower(df$ORG_NAME),  df$NEW_NAME[match(tolower("social_history"), tolower(df$ORG_NAME))], "social_history")
+  provider_specialty <- ifelse("provider_specialty" %in% tolower(df$ORG_NAME),  df$NEW_NAME[match(tolower("provider_specialty"), tolower(df$ORG_NAME))], "provider_specialty")
+  diagnoses <- ifelse("diagnoses" %in% tolower(df$ORG_NAME),  df$NEW_NAME[match(tolower("diagnoses"), tolower(df$ORG_NAME))], "diagnoses")
+  vital_signs <- ifelse("vital_signs" %in% tolower(df$ORG_NAME),  df$NEW_NAME[match(tolower("vital_signs"), tolower(df$ORG_NAME))], "vital_signs")
+  census_location <- ifelse("census_location" %in% tolower(df$ORG_NAME),  df$NEW_NAME[match(tolower("census_location"), tolower(df$ORG_NAME))], "census_location")
+  demographics <- ifelse("demographics" %in% tolower(df$ORG_NAME),  df$NEW_NAME[match(tolower("demographics"), tolower(df$ORG_NAME))], "demographics")
+  
+} else {
+  # Names of database tables
+  lab_results    <- "LAB_RESULTS"
+  encounters      <- "ENCOUNTERS"
+  prescribing <- "PRESCRIBING"
+  procedures     <- "PROCEDURES"
+  social_history  <- "SOCIAL_HISTORY"
+  provider_specialty <- "PROVIDER_SPECIALTY"
+  diagnoses <- "DIAGNOSES"
+  vital_signs <- "VITAL_SIGNS"
+  census_location <- "CENSUS_LOCATION"
+  demographics <- "DEMOGRAPHIC"
+}
+
+
 library(knitr)
 library(tidyverse)
 
@@ -86,19 +117,19 @@ This table contains summary counts and date ranges by table. Distinct encounters
 
 ```{r tab1_sum_stats}
 
-lab_res_db <- tbl(con, "LAB_RESULTS")
-encounters_db <-  tbl(con, "ENCOUNTERS")
-rx_db <-  tbl(con, "PRESCRIBING")
-px_db <-  tbl(con, "PROCEDURES")
-sh_db <-  tbl(con, "SOCIAL_HISTORY")
-prov_spec_db <-  tbl(con, "PROVIDER_SPECIALTY")
+lab_res_db <- tbl(con, lab_results)
+encounters_db <-  tbl(con, encounters)
+rx_db <-  tbl(con, prescribing)
+px_db <-  tbl(con, procedures)
+sh_db <-  tbl(con, social_history)
+prov_spec_db <-  tbl(con, provider_specialty)
 
-tab1_lab <- odbc::dbGetQuery(con, "select count(*) as nrows, 
+tab1_lab <- odbc::dbGetQuery(con, paste0("select count(*) as nrows, 
 	count(distinct person_id) as npats,
   'RESULT_DT' as fieldname,
 	min(result_dt) as mindt,
 	max(result_dt) as maxdt
-	from lab_results")
+	from ", lab_results))
 
 tab1_lab <- data.frame(nrows = tab1_lab$nrows, 
                        npats = tab1_lab$npats, 
@@ -108,34 +139,34 @@ tab1_lab <- data.frame(nrows = tab1_lab$nrows,
                        maxdt = tab1_lab$maxdt)
 
 
-tab1_rx <- odbc::dbGetQuery(con, "select count(*) as nrows, 
+tab1_rx <- odbc::dbGetQuery(con, paste0("select count(*) as nrows, 
 	count(distinct person_id) as npats,
   count(distinct enc_id) as nencts,
   'RX_ORDER_DATE' as fieldname,
 	min(rx_order_date) as mindt,
 	max(rx_order_date) as maxdt
-	from prescribing")
+	from ", prescribing))
 
 
-tab1_px <- odbc::dbGetQuery(con, "select count(*) as nrows, 
+tab1_px <- odbc::dbGetQuery(con, paste0("select count(*) as nrows, 
 	count(distinct person_id) as npats,
   count(distinct enc_id) as nencts,
   'PROCDATE' as fieldname,
 	min(procdate) as mindt,
 	max(procdate) as maxdt
-	from procedures")
+	from ", procedures))
 
 
-tab1_sh <- odbc::dbGetQuery(con, "select count(*) as nrows, 
+tab1_sh <- odbc::dbGetQuery(con, paste0("select count(*) as nrows, 
 	count(distinct person_id) as npats,
   'CONTACT_DATE' as fieldname,
   count(distinct enc_id) as nencts,
 	min(contact_date) as mindt,
 	max(contact_date) as maxdt
-	from social_history")
+	from ", social_history))
 
-tab1_ps <- odbc::dbGetQuery(con, "select count(*) as nrows
-	from provider_specialty")
+tab1_ps <- odbc::dbGetQuery(con, paste0("select count(*) as nrows
+	from ", provider_specialty))
 
 tab1_ps <- data.frame(nrows = tab1_ps$nrows, npats = NA, nencts = NA, fieldname = NA, mindt = NA, maxdt = NA)
 
@@ -157,20 +188,20 @@ This table contains record counts for null and unknown values across P2 tables.
 
 ```{r tab2_res}
 tab2_lab_null <- odbc::dbGetQuery(con, 
-  "SELECT SUM(CASE WHEN TEST_TYPE IS NULL THEN 1 ELSE 0 END) as TEST_TYPE,
+  paste0("SELECT SUM(CASE WHEN TEST_TYPE IS NULL THEN 1 ELSE 0 END) as TEST_TYPE,
    SUM(CASE WHEN BATTERY_CD IS NULL THEN 1 ELSE 0 END) as BATTERY_CD,
    SUM(CASE WHEN LOINC IS NULL THEN 1 ELSE 0 END) as LOINC,
    SUM(CASE WHEN LOCAL_CD IS NULL THEN 1 ELSE 0 END) as LOCAL_CD,
    SUM(CASE WHEN RESULT_NUM IS NULL THEN 1 ELSE 0 END) as RESULT_NUM,
    SUM(CASE WHEN RESULT_UNIT IS NULL THEN 1 ELSE 0 END) as RESULT_UNIT,
    SUM(CASE WHEN SPECIMEN_SOURCE IS NULL THEN 1 ELSE 0 END) as SPECIMEN_SOURCE
-      FROM lab_results")
+      FROM ", lab_results))
 
 tab2_lab_null2 <- data.frame(table = rep("LAB_RESULTS", ncol(tab2_lab_null)), var = names(tab2_lab_null), records_null = t(tab2_lab_null)[,1])
 row.names(tab2_lab_null2) <- NULL
 
 tab2_rx_null <- odbc::dbGetQuery(con, 
-  "SELECT SUM(CASE WHEN GENERIC_MED_NAME IS NULL THEN 1 ELSE 0 END) as GENERIC_MED_NAME,
+  paste0("SELECT SUM(CASE WHEN GENERIC_MED_NAME IS NULL THEN 1 ELSE 0 END) as GENERIC_MED_NAME,
    SUM(CASE WHEN RX_DAYS_SUPPLY IS NULL THEN 1 ELSE 0 END) as RX_DAYS_SUPPLY,
    SUM(CASE WHEN RX_END_DATE IS NULL THEN 1 ELSE 0 END) as RX_END_DATE,
    SUM(CASE WHEN RX_START_DATE IS NULL THEN 1 ELSE 0 END) as RX_START_DATE,
@@ -180,38 +211,38 @@ tab2_rx_null <- odbc::dbGetQuery(con,
    SUM(CASE WHEN RX_REFILLS IS NULL THEN 1 ELSE 0 END) as RX_REFILLS,
    SUM(CASE WHEN RXMD IS NULL THEN 1 ELSE 0 END) as RXMD,
    SUM(CASE WHEN RXNORM IS NULL THEN 1 ELSE 0 END) as RXNORM
-      FROM prescribing")
+      FROM ", prescribing))
 
 tab2_rx_null2 <- data.frame(table = rep("PRESCRIBING", ncol(tab2_rx_null)), var = names(tab2_rx_null), records_null = t(tab2_rx_null)[,1])
 row.names(tab2_rx_null2) <- NULL
 
 tab2_px_null <- odbc::dbGetQuery(con, 
-  "SELECT SUM(CASE WHEN PROVIDER IS NULL THEN 1 ELSE 0 END) as PROVIDER,
+  paste0("SELECT SUM(CASE WHEN PROVIDER IS NULL THEN 1 ELSE 0 END) as PROVIDER,
    SUM(CASE WHEN ENCTYPE IS NULL THEN 1 ELSE 0 END) as ENCTYPE,
    SUM(CASE WHEN PXCNT IS NULL THEN 1 ELSE 0 END) as PXCNT
-      FROM procedures")
+      FROM ", procedures))
 
 tab2_px_null2 <- data.frame(table = rep("PROCEDURES", ncol(tab2_px_null)), var = names(tab2_px_null), records_null = t(tab2_px_null)[,1])
 row.names(tab2_px_null2) <- NULL
 
 tab2_ps_null <- odbc::dbGetQuery(con, 
-  "SELECT SUM(CASE WHEN SPECIALTY IS NULL THEN 1 ELSE 0 END) as SPECIALTY,
+  paste0("SELECT SUM(CASE WHEN SPECIALTY IS NULL THEN 1 ELSE 0 END) as SPECIALTY,
    SUM(CASE WHEN PROVIDER_TYPE IS NULL THEN 1 ELSE 0 END) as PROVIDER_TYPE,
    SUM(CASE WHEN PROVIDER_BIRTH_YEAR IS NULL THEN 1 ELSE 0 END) as PROVIDER_BIRTH_YEAR,
    SUM(CASE WHEN PROVIDER_GENDER IS NULL THEN 1 ELSE 0 END) as PROVIDER_GENDER,
    SUM(CASE WHEN PROVIDER_RACE IS NULL THEN 1 ELSE 0 END) as PROVIDER_RACE,
    SUM(CASE WHEN PROVIDER_HISPANIC IS NULL THEN 1 ELSE 0 END) as PROVIDER_HISPANIC
-      FROM provider_specialty")
+      FROM ", provider_specialty))
 
 tab2_ps_null2 <- data.frame(table = rep("PROVIDER_SPECIALTY", ncol(tab2_ps_null)), var = names(tab2_ps_null), records_null = t(tab2_ps_null)[,1])
 row.names(tab2_ps_null2) <- NULL
 
 tab2_sh_null <- odbc::dbGetQuery(con, 
-  "SELECT SUM(CASE WHEN TOBACCO_USER IS NULL THEN 1 ELSE 0 END) as TOBACCO_USER,
+  paste0("SELECT SUM(CASE WHEN TOBACCO_USER IS NULL THEN 1 ELSE 0 END) as TOBACCO_USER,
    SUM(CASE WHEN ALCOHOL_USER IS NULL THEN 1 ELSE 0 END) as ALCOHOL_USER,
    SUM(CASE WHEN ILL_DRUG_USER IS NULL THEN 1 ELSE 0 END) as ILL_DRUG_USER,
    SUM(CASE WHEN ENC_ID IS NULL THEN 1 ELSE 0 END) as ENC_ID
-      FROM social_history")
+      FROM ", social_history))
 
 tab2_sh_null2 <- data.frame(table = rep("SOCIAL_HISTORY", ncol(tab2_sh_null)), var = names(tab2_sh_null), records_null = t(tab2_sh_null)[,1])
 row.names(tab2_sh_null2) <- NULL
@@ -226,29 +257,29 @@ tab2_null <- bind_rows(tab2_lab_null2, tab2_rx_null2, tab2_px_null2, tab2_ps_nul
   )
 
 tab2_lab_uk <- odbc::dbGetQuery(con, 
-  "SELECT SUM(CASE WHEN TEST_TYPE = 'Unknown' THEN 1 ELSE 0 END) as TEST_TYPE
-      FROM lab_results")
+  paste0("SELECT SUM(CASE WHEN TEST_TYPE = 'Unknown' THEN 1 ELSE 0 END) as TEST_TYPE
+      FROM ", lab_results))
 
 tab2_lab_uk2 <- data.frame(table = rep("LAB_RESULTS", ncol(tab2_lab_uk)), var = names(tab2_lab_uk), records_uk = t(tab2_lab_uk)[,1])
 row.names(tab2_lab_uk2) <- NULL
 
 
 tab2_ps_uk <- odbc::dbGetQuery(con, 
-  "SELECT SUM(CASE WHEN SPECIALTY = 'UNK' THEN 1 ELSE 0 END) as SPECIALTY,
+  paste0("SELECT SUM(CASE WHEN SPECIALTY = 'UNK' THEN 1 ELSE 0 END) as SPECIALTY,
    SUM(CASE WHEN PROVIDER_TYPE = 999 THEN 1 ELSE 0 END) as PROVIDER_TYPE,
    SUM(CASE WHEN PROVIDER_GENDER = 'U' THEN 1 ELSE 0 END) as PROVIDER_GENDER,
    SUM(CASE WHEN PROVIDER_RACE = 'U' THEN 1 ELSE 0 END) as PROVIDER_RACE,
    SUM(CASE WHEN PROVIDER_HISPANIC = 'U' THEN 1 ELSE 0 END) as PROVIDER_HISPANIC
-      FROM provider_specialty")
+      FROM ", provider_specialty))
 
 tab2_ps_uk2 <- data.frame(table = rep("PROVIDER_SPECIALTY", ncol(tab2_ps_uk)), var = names(tab2_ps_uk), records_uk = t(tab2_ps_uk)[,1])
 row.names(tab2_ps_uk2) <- NULL
 
 tab2_sh_uk <- odbc::dbGetQuery(con, 
-  "SELECT SUM(CASE WHEN TOBACCO_USER = 'U' THEN 1 ELSE 0 END) as TOBACCO_USER,
+  paste0("SELECT SUM(CASE WHEN TOBACCO_USER = 'U' THEN 1 ELSE 0 END) as TOBACCO_USER,
    SUM(CASE WHEN ALCOHOL_USER = 'U' THEN 1 ELSE 0 END) as ALCOHOL_USER,
    SUM(CASE WHEN ILL_DRUG_USER = 'U' THEN 1 ELSE 0 END) as ILL_DRUG_USER
-      FROM social_history")
+      FROM ", social_history))
 
 tab2_sh_uk2 <- data.frame(table = rep("SOCIAL_HISTORY", ncol(tab2_sh_uk)), var = names(tab2_sh_uk), records_uk = t(tab2_sh_uk)[,1])
 row.names(tab2_sh_uk2) <- NULL
@@ -281,12 +312,12 @@ This table displays trends in the number of recorded lab tests and the number of
 ```{r tab3_res}
 
 tab3 <- odbc::dbGetQuery(con, 
-  "select year(result_dt) as year,
+  paste0("select year(result_dt) as year,
     count(*) as nrows, 
 	  count(distinct person_id) as npats
-	  from lab_results
+	  from ", lab_results, "
 	    group by year(result_dt)
-      order by year(result_dt)")
+      order by year(result_dt)"))
 
 tab3 <- tab3 %>% 
   mutate(
@@ -314,15 +345,15 @@ This table illustrates the number (and percent) of priority lab test records inc
 ```{r tab4_res}
 
 tab4 <- odbc::dbGetQuery(con, 
-  "select test_type,
+  paste0("select test_type,
     count(*) as nrows, 
 	  count(distinct person_id) as npats,
     avg(result_num) as avg_resval,
     min(result_num) as min_resval,
     max(result_num) as max_resval
-	  from lab_results
+	  from ", lab_results, "
 	    group by test_type
-      order by test_type")
+      order by test_type"))
 
 tab4_tot <- data.frame(test_type = "Total", nrows = tab1_lab$nrows, npats = tab1_lab$npats, avg_resval = NA, min_resval = NA, max_resval = NA)
 tab4 <- tab4 %>% 
@@ -349,13 +380,13 @@ These figures shows temporal trends in the number of records for CHORDS priority
 ```{r fig1_res, fig.height=10, fig.width=15}
 
 fig1 <- odbc::dbGetQuery(con, 
-  "select test_type, 
+  paste0("select test_type, 
     month(result_dt) as month,
     year(result_dt) as year,
     count(*) as nrows
-	  from lab_results
+	  from ", lab_results, "
       where test_type in ('HGBA1C', 'PREGNANCY', 'HDL', 'LDL', 'TRIGLYCERIDE', 'GLUCOSE', 'CREATININE', 'HEP_C_RNA', 'HEP_C_ANTIBODY', 'HEP_C_GENOTYPE', 'IGE', 'EOSINOPHIL')
-	    group by year(result_dt), month(result_dt), test_type") 
+	    group by year(result_dt), month(result_dt), test_type")) 
 
 fig1_sub <- fig1 %>% 
   arrange(year, month, test_type) %>% 
@@ -392,11 +423,11 @@ This table illustrates the number (and percent) of the data partner's ten most c
 ```{r tab5_res}
 
 tab5 <- odbc::dbGetQuery(con, 
-  "select battery_cd,
+  paste0("select battery_cd,
     count(*) as nrows, 
 	  count(distinct person_id) as npats
-	  from lab_results
-	    group by battery_cd")
+	  from ", lab_results, "
+	    group by battery_cd"))
 
 tab5_sub <- tab5 %>% 
   mutate(
@@ -429,19 +460,19 @@ This table displays trends in PRESCRIBING record volume over time as well as pat
 ```{r tab6_res}
 
 tab6 <- odbc::dbGetQuery(con, 
-  "select year(rx_order_date) as year,
+  paste0("select year(rx_order_date) as year,
     count(*) as nrows, 
 	  count(distinct person_id) as npats
-	  from prescribing
+	  from ", prescribing, "
 	    group by year(rx_order_date)
-      order by year(rx_order_date)")
+      order by year(rx_order_date)"))
 
 tab6_avg_pats <- odbc::dbGetQuery(con, 
-  "select year(rx_order_date) as year,
+  paste0("select year(rx_order_date) as year,
     count(*) as nrows
-	  from prescribing
+	  from ", prescribing, "
 	    group by year(rx_order_date), person_id
-      order by year(rx_order_date)") %>% 
+      order by year(rx_order_date)")) %>% 
   arrange(year) %>% 
   group_by(year) %>% 
   summarise_all(funs(mean, median, min, max))%>% 
@@ -472,37 +503,37 @@ This table displays the top ten most common orders including count of records an
 ```{r tab7_res}
 
 tab7_basis2 <- odbc::dbGetQuery(con, 
-  "select top 10 GENERIC_MED_NAME,
+  paste0("select top 10 GENERIC_MED_NAME,
     count(*) as nrows,
 	  count(distinct person_id) as npats,
     avg(RX_DAYS_SUPPLY) as avg_days_sup,
     avg(RX_QUANTITY_NUM) as avg_rx_quant
-	  from prescribing
+	  from ", prescribing, "
       where RX_BASIS = '02'
 	    group by GENERIC_MED_NAME
-      order by nrows DESC") 
+      order by nrows DESC"))
 
 tab7_basis1 <- odbc::dbGetQuery(con, 
-  "select top 10 GENERIC_MED_NAME,
+  paste0("select top 10 GENERIC_MED_NAME,
     count(*) as nrows,
 	  count(distinct person_id) as npats,
     avg(RX_DAYS_SUPPLY) as avg_days_sup,
     avg(RX_QUANTITY_NUM) as avg_rx_quant
-	  from prescribing
+	  from ", prescribing, "
       where RX_BASIS = '01'
 	    group by GENERIC_MED_NAME
-      order by nrows DESC") 
+      order by nrows DESC"))
 
 tab7_basis_oth <- odbc::dbGetQuery(con, 
-  "select top 10 GENERIC_MED_NAME,
+  paste0("select top 10 GENERIC_MED_NAME,
     count(*) as nrows,
 	  count(distinct person_id) as npats,
     avg(RX_DAYS_SUPPLY) as avg_days_sup,
     avg(RX_QUANTITY_NUM) as avg_rx_quant
-	  from prescribing
+	  from ", prescribing, "
       where RX_BASIS in ('NI', 'UN', 'OT')
 	    group by GENERIC_MED_NAME
-      order by nrows DESC") 
+      order by nrows DESC"))
 
 
 ```
@@ -544,20 +575,20 @@ This table examines the volume of procedures over time and the number of encount
 ```{r tab8_res}
 
 tab8 <- odbc::dbGetQuery(con, 
-  "select year(procdate) as year,
+  paste0("select year(procdate) as year,
     count(*) as nrows, 
     count(distinct enc_id) as nencts,
 	  count(distinct person_id) as npats
-	  from procedures
+	  from ", procedures, "
 	    group by year(procdate)
-      order by year(procdate)")
+      order by year(procdate)"))
 
 tab8_avg_encts <- odbc::dbGetQuery(con, 
-  "select year(procdate) as year,
+  paste("select year(procdate) as year,
     count(*) as nrows
-	  from procedures
+	  from ", procedures, "
 	    group by year(procdate), enc_id
-      order by year(procdate)") %>% 
+      order by year(procdate)")) %>% 
   arrange(year) %>% 
   group_by(year) %>% 
   summarise_all(funs(mean, median, min, max)) %>% 
@@ -567,11 +598,11 @@ tab8_avg_encts <- odbc::dbGetQuery(con,
   select(enct_val)
 
 tab8_avg_pats <- odbc::dbGetQuery(con, 
-  "select year(procdate) as year,
+  paste0("select year(procdate) as year,
     count(*) as nrows
-	  from procedures
+	  from ", procedures, "
 	    group by year(procdate), person_id
-      order by year(procdate)") %>% 
+      order by year(procdate)")) %>% 
   arrange(year) %>% 
   group_by(year) %>% 
   summarise_all(funs(mean, median, min, max))%>% 
@@ -604,34 +635,34 @@ This table compares the distribution of procedures, diagnoses and encounters by 
 ```{r tab9_res}
 
 tab9_enct1 <- odbc::dbGetQuery(con, 
-  "select enctype,
+  paste0("select enctype,
     count(*) as nrows_enct
-	  from encounters
-	    group by enctype")
+	  from ", encounters, "
+	    group by enctype"))
 
 tab9_enct2 <- odbc::dbGetQuery(con, 
-  "select count(*) as enct_tot
-	  from encounters")
+  paste0("select count(*) as enct_tot
+	  from ", encounters))
 
 tab9_diag1 <- odbc::dbGetQuery(con, 
-  "select enctype,
+  paste0("select enctype,
     count(*) as nrows_diag
-	  from diagnoses
-	    group by enctype")
+	  from ", diagnoses, "
+	    group by enctype"))
 
 tab9_diag2 <- odbc::dbGetQuery(con, 
-  "select count(*) as diag_tot
-	  from diagnoses")
+  paste0("select count(*) as diag_tot
+	  from ", diagnoses))
 
 tab9_px1 <- odbc::dbGetQuery(con, 
-  "select enctype,
+  paste0("select enctype,
     count(*) as nrows_px
-	  from procedures
-	    group by enctype")
+	  from ", procedures, "
+	    group by enctype"))
 
 tab9_px2 <- odbc::dbGetQuery(con, 
-  "select count(*) as px_tot
-	  from procedures")
+  paste0("select count(*) as px_tot
+	  from ", procedures))
 
 tab9_tot <- data.frame(enctype = "Total", nrows_enct = tab9_enct2$enct_tot, nrows_diag = tab9_diag2$diag_tot, nrows_px = tab9_px2$px_tot, pct_enct = NA, pct_diag = NA, pct_px = NA)
 
@@ -644,7 +675,7 @@ tab9_all <- tab9_enct1 %>%
     pct_px   = nrows_px / tab9_px2$px_tot * 100,
     enctype  = recode(enctype, "IP" = "Acute In Patient", "ED" = "Emergency Department", "AV" = "Ambulatory Visit", "TE" = "Telephone Encounter", "EM" = "E-mail Encounter", "IS" = "Non-acute Inpatient", "OE" = "Other Encounters", "LO" = "Lab Only Encounter", "RO" = "Radiology Only Encounter")
   ) %>% 
-  bind_rows(., tab9_tot)  
+  bind_rows(., tab9_tot) 
 
 
 ```
@@ -662,23 +693,23 @@ This table includes information on the ten most common procedures recorded in yo
 ```{r tab10_res}
 
 tab10_pxall <- odbc::dbGetQuery(con, 
-  "select px,
+  paste0("select px,
     px_codetype,
     count(*) as nrows_all,
     count(distinct person_id) as npats
-	  from procedures
-	    group by px, px_codetype") %>% 
+	  from ", procedures, "
+	    group by px, px_codetype")) %>% 
   arrange(desc(nrows_all)) %>% 
   head(., 10)
 
 tab10_pxav <- odbc::dbGetQuery(con, 
-  "select px as px_av,
+  paste0("select px as px_av,
     px_codetype as px_codetype_av,
     count(*) as nrows_av,
     count(distinct person_id) as npats_av
-	  from procedures
+	  from ", procedures, "
       where ENCTYPE = 'AV'
-	    group by px, px_codetype") %>% 
+	    group by px, px_codetype")) %>% 
   arrange(desc(nrows_av)) %>% 
   head(., 10)
 
@@ -699,31 +730,31 @@ This table includes information on the ten most common procedures recorded in yo
 ```{r tab11_res}
 
 tab11_pxc4 <- odbc::dbGetQuery(con, 
-  "select top 10 px,
+  paste0("select top 10 px,
     count(*) as nrows_all,
     count(distinct person_id) as npats
-	  from procedures
+	  from ", procedures, "
 	    where px_codetype = 'C4'
       group by px
-      order by nrows_all DESC") 
+      order by nrows_all DESC"))
 
 tab11_pxh4 <- odbc::dbGetQuery(con, 
-  "select top 10 px,
+  paste0("select top 10 px,
     count(*) as nrows_all,
     count(distinct person_id) as npats
-	  from procedures
+	  from ", procedures, "
 	    where px_codetype = 'H4'
       group by px
-      order by nrows_all DESC") 
+      order by nrows_all DESC"))
 
 tab11_px_oth <- odbc::dbGetQuery(con, 
-  "select top 10 px,
+  paste0("select top 10 px,
     count(*) as nrows_all,
     count(distinct person_id) as npats
-	  from procedures
+	  from ", procedures, "
 	    where px_codetype IN ('09', '10', '11', 'RV', 'LO', 'OT')
       group by px
-      order by nrows_all DESC") 
+      order by nrows_all DESC"))
 ```
 
 ```{r tab11_disp, results="asis"}
@@ -764,34 +795,34 @@ This table includes information on the number and percent of providers represent
 ```{r tab12_res}
 
 tab12_ps <- odbc::dbGetQuery(con, 
-  "select 'PROVIDER_SPECIALTY' as from_tab,
+  paste0("select 'PROVIDER_SPECIALTY' as from_tab,
    count(distinct provider) as num_prov
-     from provider_specialty")
+     from ", provider_specialty))
 
 tab12_dx <- odbc::dbGetQuery(con, 
-  "select 'DIAGNOSES' as from_tab,
+  paste0("select 'DIAGNOSES' as from_tab,
    count(distinct provider) as num_prov
-     from diagnoses")
+     from ", diagnoses))
 
 tab12_enct <- odbc::dbGetQuery(con, 
-  "select 'ENCOUNTERS' as from_tab,
+  paste0("select 'ENCOUNTERS' as from_tab,
    count(distinct provider) as num_prov
-     from encounters")
+     from ", encounters))
 
 tab12_lab <- odbc::dbGetQuery(con, 
-  "select 'LAB_RESULTS' as from_tab,
+  paste0("select 'LAB_RESULTS' as from_tab,
    count(distinct order_prov) as num_prov 
-     from lab_results")
+     from ", lab_results))
 
 tab12_rx <- odbc::dbGetQuery(con, 
-  "select 'PRESCRIBING' as from_tab,
+  paste0("select 'PRESCRIBING' as from_tab,
    count(distinct rxmd) as num_prov 
-     from PRESCRIBING")
+     from ", prescribing))
 
 tab12_px <- odbc::dbGetQuery(con, 
-  "select 'PROCEDURES' as from_tab,
+  paste0("select 'PROCEDURES' as from_tab,
    count(distinct provider) as num_prov
-     from procedures")
+     from ", procedures))
 
 tab12_all <- bind_rows(tab12_ps, tab12_dx, tab12_enct, tab12_lab, tab12_rx, tab12_px) %>% 
   mutate(
@@ -816,11 +847,11 @@ This table includes information on the distribution of providers by specialty
 ```{r tab13_res}
 
 tab13 <- odbc::dbGetQuery(con, 
-  "select specialty as spec,
+  paste0("select specialty as spec,
    count(distinct provider) as num_prov
-     from provider_specialty
+     from ", provider_specialty, "
        group by specialty
-       order by specialty") %>% 
+       order by specialty")) %>% 
   bind_rows(data.frame(spec = "NULL", num_prov = tab2_ps_null$SPECIALTY)) %>% 
   mutate(
     pct_prov = num_prov / tab12_ps$num_prov * 100
@@ -845,11 +876,11 @@ This table includes information on the distribution of providers by type.
 ```{r tab14_res}
 
 tab14 <- odbc::dbGetQuery(con, 
-  "select provider_type as prov_type,
+  paste0("select provider_type as prov_type,
    count(distinct provider) as num_prov
-     from provider_specialty
+     from ", provider_specialty, "
        group by provider_type
-       order by provider_type") %>% 
+       order by provider_type")) %>% 
   bind_rows(data.frame(prov_type = "NULL", num_prov = tab2_ps_null$PROVIDER_TYPE)) %>% 
   mutate(
     pct_prov = num_prov / tab12_ps$num_prov * 100
@@ -874,7 +905,7 @@ This table includes information on the distribution of SOCIAL_HISTORY records by
 ```{r tab15_res}
 
 tab15 <- odbc::dbGetQuery(con, 
-  "select year(contact_date) as year,
+  paste0("select year(contact_date) as year,
    count(*) as num_rec,
    SUM(CASE WHEN TOBACCO_USER = 'Y' THEN 1 ELSE 0 END) as smoker,
    SUM(CASE WHEN TOBACCO_USER = 'I' THEN 1 ELSE 0 END) as infreq,
@@ -883,9 +914,9 @@ tab15 <- odbc::dbGetQuery(con,
    SUM(CASE WHEN TOBACCO_USER = 'N' THEN 1 ELSE 0 END) as never,
    SUM(CASE WHEN TOBACCO_USER IN ('X', 'U') THEN 1 ELSE 0 END) as unknown,
    SUM(CASE WHEN TOBACCO_USER IS NULL THEN 1 ELSE 0 END) as t_null
-     from social_history
+     from ", social_history, "
        group by year(contact_date)
-       order by year(contact_date)")
+       order by year(contact_date)"))
 
 tab15$year <- as.character(tab15$year)
 
@@ -904,22 +935,22 @@ This table includes information on the distribution of SOCIAL_HISTORY records by
 ```{r tab16_res}
 
 tab16 <- odbc::dbGetQuery(con, 
-  "select year(contact_date) as year,
+  paste0("select year(contact_date) as year,
    count(*) as num_rec,
    SUM(CASE WHEN ALCOHOL_USER = 'Y' THEN 1 ELSE 0 END) as alc_use,
    SUM(CASE WHEN ALCOHOL_USER = 'Q' THEN 1 ELSE 0 END) as former,
    SUM(CASE WHEN ALCOHOL_USER = 'N' THEN 1 ELSE 0 END) as never,
    SUM(CASE WHEN ALCOHOL_USER IN ('X', 'U') THEN 1 ELSE 0 END) as unknown,
    SUM(CASE WHEN ALCOHOL_USER IS NULL THEN 1 ELSE 0 END) as t_null
-     from social_history
+     from ", social_history, "
        group by year(contact_date)
-       order by year(contact_date)")
+       order by year(contact_date)"))
 
 tab16$year <- as.character(tab16$year)
 
 odbc::dbGetQuery(con,
-  "select top 10 *
-from social_history")
+  paste0("select top 10 *
+from ", social_history))
 
 ```
 
@@ -935,16 +966,16 @@ This table includes information on the distribution of SOCIAL_HISTORY records by
 ```{r tab17_res}
 
 tab17 <- odbc::dbGetQuery(con, 
-  "select year(contact_date) as year,
+  paste0("select year(contact_date) as year,
    count(*) as num_rec,
    SUM(CASE WHEN ILL_DRUG_USER = 'Y' THEN 1 ELSE 0 END) as ill_drug,
    SUM(CASE WHEN ILL_DRUG_USER = 'Q' THEN 1 ELSE 0 END) as former,
    SUM(CASE WHEN ILL_DRUG_USER = 'N' THEN 1 ELSE 0 END) as never,
    SUM(CASE WHEN ILL_DRUG_USER IN ('X', 'U') THEN 1 ELSE 0 END) as unknown,
    SUM(CASE WHEN ILL_DRUG_USER IS NULL THEN 1 ELSE 0 END) as t_null
-     from social_history
+     from ", social_history, "
        group by year(contact_date)
-       order by year(contact_date)")
+       order by year(contact_date)"))
 
 tab17$year <- as.character(tab17$year)
 
